# cidiff-analysis

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  NOTICE  README.md  accuracy.ipynb  analysis.ipynb  annotations.csv  benchmark-slayer.csv  benchmark.csv  dataset.csv  justfile  merge_csv.sh  protocol.typ  pyproject.toml  result.csv  results.csv  settings.gradle  survey.csv
annotator-java/: .gitignore  README.md  build.gradle  selection.csv  settings.gradle
annotator-java/src/main/java/org/github/cidiff/annotations/: Main.java
annotator-rust/: .gitignore  Cargo.toml  README.md
annotator-rust/src/apollo/: mod.rs  state.rs
annotator-rust/src/arthemis/: state.rs  widget.rs
benchmark/: build.gradle  settings.gradle
benchmark/gradle/wrapper/: gradle-wrapper.properties
benchmark/src/main/java/org/github/cidiff/benchmark/: Benchmark.java
csv/: annotations.csv
gradle/wrapper/: gradle-wrapper.properties
src/: lib.rs  main.rs  states.rs  widgets.rs
src/apollo/: mod.rs  widget.rs
src/arthemis/: mod.rs
src/main/java/com/github/cidiff/exp/: Main.java
src/main/python/: accuracy.ipynb
viewers-generator/: build.gradle  settings.gradle
viewers-generator/src/main/java/org/github/cidiff/viewers/: Generate.java
viewers-generator/src/main/resources/: evaluation.mustache
