[package]
name = "apollo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.20", features = ["derive"] }
copypasta = "0.10.1"
csv = "1.3.1"
indicatif = "0.17.8"
linecount = { git = "https://github.com/eclarke/linecount.git", version = "0.2.0", features = ["runtime-dispatch-simd"] }
lru = "0.12.5"
rand = "0.8.5"
rand_chacha = "0.3.1"
ratatui = "0.28.1"
regex = "1.11.1"
serde = { version = "1.0.210", features = ["derive"] }
toml = "0.8.19"
